test/good/nullables/print01.px

print null

x: Int? = 0
print null.toString() + "{x}"
