test/bad/classes/cmp01.px

class A def
    Int x

class B def
    Int x

A(0) == B(0)
